--- a/assets/pages/login/index.html
+++ b/assets/pages/login/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Ralewswapay:wght@400;500;700&display=" rel="stylesheet">
   <title>Alura-Geek Game Page</title>
   <link rel="stylesheet" href="../../css/normalize.css">
   <link rel="stylesheet" href="../../css/reset.css">
@@ -19,26 +16,22 @@
   <link rel="stylesheet" href="../../css/components/btn.css">
   <link rel="stylesheet" href="login.css">
 </head>
-
 <body>
   <nav class="navHeader navLogin" data-nav>
     <!-- JS  -->
   </nav>
-
   <main class="main__login">
     <form action="" class="login" id="loginForm">
       <h2>Iniciar Sesión</h2>
-      <input type="text" placeholder="Ingrese su correo electrónico" required/>
-      <input type="password" placeholder="Ingrese su contraseña" name="password" autocomplete="off" required/>
-      <input type="submit" class="btn__submit" value="Entrar"/>
+      <input type="text" id="email" placeholder="Ingrese su correo electrónico" required/>
+      <input type="password" id="password" placeholder="Ingrese su contraseña" name="password" autocomplete="off" required/>
+      <input type="button" onclick="validar()" class="btn__submit" value="Entrar"/>
       <div id="errorMessages" style="color: red;"></div>
     </form>
   </main>
-
   <footer data-footer>
     <!-- JS  -->
   </footer>
   <script type="module" src="index.js"></script>
 </body>
-
 </html>
